--- a/css/style.css
+++ b/css/style.css
@@ -3,11 +3,22 @@ body {
   font-size: 22px;
 }
 .navbar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
   background-color: #07263b;
   height: 70px;
   color: aliceblue;
   padding: 15px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.logo {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.logo img {
+  width: 150px;
+  height: 150px;
 }
