--- a/css/style.css
+++ b/css/style.css
@@ -6,10 +6,14 @@ body {
   background-color: #07263b;
   height: 70px;
   color: aliceblue;
-  padding: 15px;
+  padding: 20px;
   display: flex;
+  flex-direction: row;
   justify-content: space-around;
   align-items: center;
+}
+.btn {
+  border-radius: 15px;
 }
 .logo {
   display: flex;
@@ -22,7 +26,7 @@ body {
   width: 150px;
   height: 150px;
 }
-.body {
+#body {
   margin-top: 30px;
   display: flex;
   flex-direction: column;
@@ -41,4 +45,15 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.back {
+  margin: 30px;
+}
+
+.category {
+  height: 70px;
+  display: flex;
+  align-items: stretch;
+  justify-content: space-around;
 }
