--- a/css/style.css
+++ b/css/style.css
@@ -42,3 +42,24 @@ body {
   justify-content: center;
   align-items: center;
 }
+.footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  background-color: #07263b;
+  color: aliceblue;
+}
+.left,
+.center,
+.right {
+  display: flex;
+  flex-direction: column;
+  margin-top: 25px;
+}
+.img1 {
+  width: 200px;
+}
+.img2 {
+  margin-top: 20px;
+  width: 195px;
+}
