--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,7 @@ body {
 .img2 {
   margin-top: 20px;
   width: 195px;
-
+}
 .back {
   margin: 30px;
 }
@@ -76,4 +76,12 @@ body {
   display: flex;
   align-items: stretch;
   justify-content: space-around;
+}
+
+.whatches {
+  margin: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex-wrap: wrap;
 }
