--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,43 @@
 body {
   margin: 0 auto;
-  font-size: 22px;
+  font-size: 24px;
 }
 .navbar {
   background-color: #07263b;
   height: 70px;
   color: aliceblue;
-  padding: 20px;
+  padding: 15px;
   display: flex;
-  flex-direction: row;
   justify-content: space-around;
   align-items: center;
 }
-.btn {
-  border-radius: 15px;
+.navbar a {
+  margin-bottom: 15px;
+  margin-left: 15px;
+  text-decoration: none;
+  color: aliceblue;
 }
+#btn {
+  margin-bottom: 15px;
+}
+.dropdown {
+  margin-bottom: 15px;
+}
+.seach {
+  margin-right: 20px;
+}
+
+.search {
+  background-color: white;
+  transition: background-color 0.3s ease;
+}
+
+.search:hover {
+  background-color: lightgray;
+}
+
+/* <p class="search">Поиск</p> */
+
 .logo {
   display: flex;
   flex-direction: row;
@@ -26,7 +49,7 @@ body {
   width: 150px;
   height: 150px;
 }
-#body {
+.body {
   margin-top: 30px;
   display: flex;
   flex-direction: column;
@@ -66,22 +89,4 @@ body {
 .img2 {
   margin-top: 20px;
   width: 195px;
-}
-.back {
-  margin: 30px;
-}
-
-.category {
-  height: 70px;
-  display: flex;
-  align-items: stretch;
-  justify-content: space-around;
-}
-
-.whatches {
-  margin: 40px;
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  flex-wrap: wrap;
 }
