--- a/css/style.css
+++ b/css/style.css
@@ -177,3 +177,19 @@ body {
   height: 50px;
   border-radius: 15px;
 }
+
+.pagination {
+  margin: 30px;
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+}
+
+.btn-pagination {
+  margin: 10px;
+  width: 50px;
+  height: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
